--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline text-blue-500">
-    Hello world!
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./output.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header class="h-24 py-5 px-10 flex items-center">
+      <!-- logo -->
+      <img
+        src="/imgs/logo-durmon.png"
+        alt="durmon logo"
+        height="48"
+        class="object-cover h-12"
+      />
+
+      <!-- nav links -->
+      <nav>
+        <ul>
+          <li>О проекте</li>
+          <li>ДОМА</li>
+          <li>Галерея</li>
+          <li>btns</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
