--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <body>
     <header class="h-dvh w-full">
       <!-- navbar -->
-      <nav class="h-16 py-5 px-10 xl:px-14 flex items-center justify-between">
+      <nav class="h-16 py-5 px-2 md:px-10 xl:px-14 flex items-center justify-between">
         <!-- logo -->
         <a href="/">
           <img
