plans section created

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 "linear-gradient(to right, rgba(255, 184, 110, 0.7) 42%, rgba(217, 217, 217, 0.7) 100%)",
             },
             boxShadow: {
-              card: "0px 0px 30px 0px #00000026",
+              card: "0px 0px 10px 0px #00000026",
             },
           },
           plugins: [],
@@ -170,18 +170,20 @@
     <main
       class="px-4 py-2 sm:px-12 sm:py-6 md:px-16 md:py-8 lg:px-20 lg:py-10 xl:px-24 xl:py-12"
     >
-      <!-- projects -->
+      <!-- section - about projects -->
       <section>
         <!-- title -->
         <h1
-          class="bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-2 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
+          class="bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-4 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
         >
           About the project
         </h1>
 
-        <!-- cards -->
-        <div class="flex flex-col gap-y-8 sm:gap-y-16 md:gap-y-20 lg:gap-y-28  xl:gap-y-32">
-          <!-- card -->
+        <!-- cards  -->
+        <div
+          class="flex flex-col gap-y-8 sm:gap-y-16 md:gap-y-20 lg:gap-y-28 xl:gap-y-32"
+        >
+          <!-- card 1-->
           <div class="flex justify-between flex-col md:flex-row bg-white">
             <div
               class="h-[400px] sm:h-[450px] md:h-[500px] lg:h-[550px] xl:h-[600px] flex-1"
@@ -213,7 +215,7 @@
             </div>
           </div>
 
-          <!-- card reverse-->
+          <!-- card reverse 2-->
           <div
             class="flex justify-between flex-col-reverse md:flex-row bg-white"
           >
@@ -221,30 +223,326 @@
               class="flex-1 pt-3 md:pt-0 md:pr-16 flex flex-col justify-center"
             >
               <h2 class="font-bold text-3xl mb-1.5 md:mb-3 lg:mb-6 xl:mb-9">
-                Improvement and infrastructure of the complex
+                Large windows
               </h2>
               <p class="mb-3">
-                The houses are designed in high-tech style with an emphasis on
-                intelligent and efficient use of space.
-              </p>
-              <p>
-                Reliable house designs are earthquake-resistant and comply with
-                all safety standards and requirements. The facades of the house,
-                modern in shape and color palette, combine the color of natural
-                pearls and gray anthracite.
+                Large windows are a real decoration of the apartment. Lots of
+                natural light creates a feeling of spaciousness in the apartment
+                and visually increases the interior space.
               </p>
             </div>
             <div
               class="h-[400px] sm:h-[450px] md:h-[500px] lg:h-[550px] xl:h-[600px] flex-1"
             >
               <img
-                src="./imgs/1-why-urban-parking-lots-are-becoming-parks 1.png"
+                src="./imgs/1-why-urban-parking-lots-are-becoming-parks 2.png"
                 alt="durmon"
                 width="350"
                 height="350"
                 class="w-full h-full object-cover"
               />
             </div>
+          </div>
+
+          <!-- card 3 -->
+          <div class="flex justify-between flex-col md:flex-row bg-white">
+            <div
+              class="h-[400px] sm:h-[450px] md:h-[500px] lg:h-[550px] xl:h-[600px] flex-1"
+            >
+              <img
+                src="./imgs/1-why-urban-parking-lots-are-becoming-parks 3.png"
+                alt="durmon"
+                width="350"
+                height="350"
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div
+              class="flex-1 pt-3 md:pt-0 md:pl-16 flex flex-col justify-center"
+            >
+              <h2 class="font-bold text-3xl mb-1.5 md:mb-3 lg:mb-6 xl:mb-9">
+                Architecture
+              </h2>
+              <p class="">
+                The houses are designed in a high-tech style with an emphasis on
+                the reasonable and rational use of space.
+              </p>
+              <p>
+                The reliable structures of the houses are earthquake-resistant
+                and comply with all safety standards and requirements.
+              </p>
+            </div>
+          </div>
+
+          <!-- card reverse 4-->
+          <div
+            class="flex justify-between flex-col-reverse md:flex-row bg-white"
+          >
+            <div
+              class="flex-1 pt-3 md:pt-0 md:pr-16 flex flex-col justify-center"
+            >
+              <h2 class="font-bold text-3xl mb-1.5 md:mb-3 lg:mb-6 xl:mb-9">
+                Thoughtful entrance areas
+              </h2>
+              <p class="mb-3">
+                The reception area is located on the first floor. And for the
+                convenience of families with small children, we have designed a
+                spacious stroller room, where you can leave the stroller until
+                the next walk.
+              </p>
+              <p>
+                Three silent high-speed elevators in the entrance will allow you
+                to quickly and safely get to your floor.
+              </p>
+            </div>
+            <div
+              class="h-[400px] sm:h-[450px] md:h-[500px] lg:h-[550px] xl:h-[600px] flex-1"
+            >
+              <img
+                src="./imgs/1-why-urban-parking-lots-are-becoming-parks 4.png"
+                alt="durmon"
+                width="350"
+                height="350"
+                class="w-full h-full object-cover"
+              />
+            </div>
+          </div>
+          <!-- card 5-->
+          <div class="flex justify-between flex-col md:flex-row bg-white">
+            <div
+              class="h-[400px] sm:h-[450px] md:h-[500px] lg:h-[550px] xl:h-[600px] flex-1"
+            >
+              <img
+                src="./imgs/1-why-urban-parking-lots-are-becoming-parks 5.png"
+                alt="durmon"
+                width="350"
+                height="350"
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div
+              class="flex-1 pt-3 md:pt-0 md:pl-16 flex flex-col justify-center"
+            >
+              <h2 class="font-bold text-3xl mb-1.5 md:mb-3 lg:mb-6 xl:mb-9">
+                Underground parking
+              </h2>
+              <p class="mb-3">
+                If you have a car, you no longer need to think about where to
+                park it. The project of the house for residents provides
+                underground parking, equipped with access control and video
+                surveillance.
+              </p>
+              <p>
+                To get home, you do not have to go outside. You can go up to
+                your floor by elevator directly from the parking lot.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- section - out houses -->
+      <section class="mt-8 sm:mt-12 md:mt-16 lg:mt-20 xl:mt-24">
+        <!-- title -->
+        <h1
+          class="bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-4 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
+        >
+          OUR HOUSES
+        </h1>
+        <!-- plan house  -->
+        <div
+          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5"
+        >
+          <!-- card-1 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house1.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
+          </div>
+
+          <!-- card-2 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house3.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
+          </div>
+
+          <!-- card-3 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house1.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
+          </div>
+
+          <!-- card-4 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house1.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
+          </div>
+
+          <!-- card-5 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house3.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
+          </div>
+
+          <!-- card-6 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house1.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
+          </div>
+
+          <!-- card-7 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house1.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
+          </div>
+
+          <!-- card-8 -->
+          <div
+            class="flex flex-col items-center shadow-card hover:scale-105 transition duration-300 ease-in-out px-6 py-3 bg-white"
+          >
+            <img
+              src="./imgs/house3.png"
+              alt="durmon house"
+              width="200"
+              height="200"
+              class="w-full h-56 object-center object-fill"
+            />
+            <h3 class="text-xl text-center mx-5 py-4">
+              1 room | Delivery in the third quarter of 2026
+            </h3>
+            <button type="button" class="rounded-3xl bg-primary px-5 py-1 mb-2">
+              <a
+                href="#"
+                class="font-semibold text-lg uppercase hover:text-white transition-colors duration-300 ease-in-out"
+              >
+                read more
+              </a>
+            </button>
           </div>
         </div>
       </section>
