--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <section>
         <!-- title -->
         <h1
-          class="bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-4 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
+          class="uppercase bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-4 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
         >
           About the project
         </h1>
@@ -341,11 +341,11 @@
         </div>
       </section>
 
-      <!-- section - out houses -->
+      <!-- section - our houses -->
       <section class="mt-8 sm:mt-12 md:mt-16 lg:mt-20 xl:mt-24">
         <!-- title -->
         <h1
-          class="bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-4 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
+          class="uppercase bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-4 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
         >
           OUR HOUSES
         </h1>
@@ -543,6 +543,94 @@
                 read more
               </a>
             </button>
+          </div>
+        </div>
+      </section>
+
+      <!-- section gallery -->
+      <section class="mt-8 sm:mt-12 md:mt-16 lg:mt-20 xl:mt-24">
+        <!-- title -->
+        <h1
+          class="uppercase bg-section w-max py-2 font-bold text-2xl lg:text-3xl xl:text-4xl mb-4 sm:mb-6 md:mb-8 lg:mb-10 xl:mb-12"
+        >
+          Project Gallery
+        </h1>
+        <!-- gallery cards  -->
+        <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+          <!-- card youtube -->
+          <div class="md:col-span-2 h-60 md:h-64 xl:h-72">
+            <iframe
+              class="h-full w-full"
+              width="480"
+              height="240"
+              src="https://www.youtube.com/embed/H11MiAGhAj8?si=orihLZbrFAm8AA8W"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+
+          <!-- card image 1 -->
+          <div class="h-60 md:h-64 xl:h-72">
+            <img
+              src="./imgs/gallery1.jpg"
+              alt="durmon avenue"
+              width="240"
+              height="240"
+              class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
+            />
+          </div>
+          <!-- card image 2-->
+          <div class="h-60 md:h-64 xl:h-72">
+            <img
+              src="./imgs/gallery2.jpg"
+              alt="durmon avenue"
+              width="240"
+              height="240"
+              class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
+            />
+          </div>
+          <!-- card image 3-->
+          <div class="h-60 md:h-64 xl:h-72">
+            <img
+              src="./imgs/gallery3.jpg"
+              alt="durmon avenue"
+              width="240"
+              height="240"
+              class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
+            />
+          </div>
+          <!-- card image 4-->
+          <div class="h-60 md:h-64 xl:h-72">
+            <img
+              src="./imgs/gallery1.jpg"
+              alt="durmon avenue"
+              width="240"
+              height="240"
+              class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
+            />
+          </div>
+          <!-- card image 5-->
+          <div class="h-60 md:h-64 xl:h-72">
+            <img
+              src="./imgs/gallery2.jpg"
+              alt="durmon avenue"
+              width="240"
+              height="240"
+              class="w-full h-full object-cover hover:shadow-card hover:scale-105 transition duration-300 ease-in-out"
+            />
+          </div>
+          <!-- card image 6-->
+          <div class="h-60 md:h-64 xl:h-72">
+            <img
+              src="./imgs/gallery3.jpg"
+              alt="durmon avenue"
+              width="240"
+              height="240"
+              class="w-full h-full object-cover hover:shadow-card hover:scale-105 transition duration-300 ease-in-out"
+            />
           </div>
         </div>
       </section>
